cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8.txt
../dataset/june2020_dataset_copy/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/DataBaseBuilder.java:32: error: (required.method.not.called) $$ 4 $$ method close $$ DriverManager.getConnection("jdbc:sqlite:MovieQuoteTrivia.db") $$ java.sql.Connection $$ possible exceptional exit due to c.createStatement() with exception type java.sql.SQLException $$ ( 846, 908 ) $$ @MustCall method close may not have been invoked on DriverManager.getConnection("jdbc:sqlite:MovieQuoteTrivia.db") or any of its aliases.
		c = DriverManager.getConnection("jdbc:sqlite:MovieQuoteTrivia.db");
		                               ^
  The type of object is: java.sql.Connection.
  Reason for going out of scope: possible exceptional exit due to c.createStatement() with exception type java.sql.SQLException
../dataset/june2020_dataset_copy/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/DataBaseBuilder.java:57: error: (required.method.not.called) $$ 4 $$ method close $$ sc $$ java.util.Scanner $$ regular method exit $$ ( 1653, 1683 ) $$ @MustCall method close may not have been invoked on sc or any of its aliases.
		Scanner sc = new Scanner(fin);
		        ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaDatabaseManager.java:23: error: (required.method.not.called) $$ 4 $$ method close $$ DriverManager.getConnection("jdbc:sqlite:MovieQuoteTrivia.db") $$ java.sql.Connection $$ possible exceptional exit due to c.createStatement() with exception type java.sql.SQLException $$ ( 626, 688 ) $$ @MustCall method close may not have been invoked on DriverManager.getConnection("jdbc:sqlite:MovieQuoteTrivia.db") or any of its aliases.
		c = DriverManager.getConnection("jdbc:sqlite:MovieQuoteTrivia.db");
		                               ^
  The type of object is: java.sql.Connection.
  Reason for going out of scope: possible exceptional exit due to c.createStatement() with exception type java.sql.SQLException
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
